--- a/styles.css
+++ b/styles.css
@@ -63,6 +63,10 @@ p{
   top:40px;
 }
 
+.mountain{
+  margin-bottom: -5px;
+}
+
 .profile-desc{
   color: #40514E;
 }
@@ -81,12 +85,16 @@ p{
   margin: auto;
 }
 
-
-.skill-row{
+.skill-row1{
   width:50%;
   margin: 80px auto 30px auto;
   text-align: left;
+}
 
+.skill-row2{
+  width:50%;
+  margin: 80px auto 30px auto;
+  text-align: right;
 }
 
 .develop{
